# gazelle-repro

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go_repositories.bzl  main.go
samples/go/: BUILD.bazel  go.mod
