load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix someproject.com
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "someproject.com",
    visibility = ["//visibility:private"],
    deps = ["@com_google_cloud_go_storage//:go_default_library"],
)

go_binary(
    name = "someproject.com",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
